--- a/app/views/tweets/tweets.erb
+++ b/app/views/tweets/tweets.erb
@@ -1,9 +1,12 @@
 <h1>Welcome, <%= @user.username %></h1> 
 
+<h3>All Tweets</h3>
 <ul>
-<% @tweets.each do |tweet| %> 
-    <li><a href="/tweets/<%= tweet.id %>"><%= tweet.user.username %> - <%= tweet.content %></a></li> 
-<% end %></ul> 
-
+  <% Tweet.all.each do |tweet| %>
+    <li>
+      <%= tweet.content %>
+    </li>
+  <% end %>
+</ul>
 
  
