--- a/app/views/users/create_user.erb
+++ b/app/views/users/create_user.erb
@@ -1,7 +1,8 @@
-<h3>Sign Up</h3>
+<h3>Sign Up Below:</h3>
+
 <form action="/signup" method="POST">
-	<input type="text" name="username" placeholder="Username">
-	<input type="text" name="email" placeholder="Email">
-	<input type="password" name="password" placeholder="Password">
-	<input type="submit" value="Sign Up">
+	<p>Username: <input type="text" name="username" id="username"></p>
+	<p>Email:<input type="text" name="email" id="email"></p>
+	<p>Password:<input type="password" name="password" id="password"></p>
+	<input type="submit" value="Sign Up" id="submit">
 </form>
