--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -1,11 +1,7 @@
-<h1>Log In Below:</h1>
+<h3>Log In Below:</h3>
 
-<form method="POST" action="/login">
-<h3><label for="username">Username:</label></h3>
-    <input type="text" name="username" id="username"> 
-
-<h3><label for="password">Password:</label></h3> 
-    <input type="password" name="password" id="password"> 
-
-<input type="submit" value="submit">
-</form> 
+<form action="/login" method="POST">
+	<p>Username: <input type="text" name="username" id="username"></p>
+	<p>Password:<input type="password" name="password" id="password"></p>
+	<input type="submit" value="Log In" id="submit">
+</form>
